apply plugin: 'java'
apply plugin: 'application'

repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
}

dependencies {
    implementation "com.github.jwharm.java-gi:glib:0.6.+"
    testImplementation "org.junit.jupiter:junit-jupiter:5.9.2"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
    withSourcesJar()
    withJavadocJar()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

jar {
    archiveBaseName = "cairo"
    archiveVersion = "1.16-0.1.0"
}

test {
    useJUnitPlatform()
    jvmArgs += "--enable-preview"
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

